--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script src="js/jquery.planetarium.js"></script>
   <script src="js/bootstrap.js"></script>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/planetarium.css">
   <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/5.2.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
   <script type="text/javascript">
       $(document).ready(function(){
@@ -32,7 +32,7 @@
   <div class="jumbotron">
 
     <h2> Vanessa Lin | Software Engineer </h2></br>
-    <h4><i>"The world only exists in your eyes. You can make it as big or as small as you want - F. Scott Fitzgerald"</i></h4></br>
+    <h4><i>The world only exists in your eyes, you can make it as big or as small as you want.</i></h4></br>
 <!--START PLANET-->
    <div class="earth planet" data-ptr-autospin="2600ms" data-ptr-float data-ptr-glow="0 0 50px #fff" > </div>
  </br></br>
@@ -72,10 +72,9 @@
           <ul class="nav navbar-nav">
             <li><a class="active"> | Home</a></li>
             <li><a href="contactme.html">|Contact &nbsp&nbsp<('.'<)</a></li>
-            <li><a href="https://github.com/v33lynn/LakersOvertime" target="blank">|Lakers Overtime </a></li>
-            <li><a href="https://www.linkedin.com/in/vanessamaylin" target="blank">| LinkedIn </a></li>
-            <li><a href="https://www.technicolor.com/" target="blank">Drupal site rebuild</a></li>
-            <li><a href="https://www.southpark.cc.com/" target="blank">React site rebuild</a></li> 
+            <li><a href="https://github.com/v33lynn/LakersOvertime" target="blank">|Lakers Overtime&nbsp&nbsp<( '.' )></a></li>
+            <li><a href="https://www.linkedin.com/in/vanessamaylin" target="blank">| LinkedIn&nbsp&nbsp(>'.')></a></li>
+            <li><a href="https://www.technicolor.com/" target="blank">Recent Rebuild&nbsp&nbsp<( '.' )></a></li> 
           </ul>
         </div>
       </div>
@@ -164,21 +163,8 @@
   </div> <!--END of jumbotron-->
 </div> <!--END of container OUTSIDE-->
 
-
-<div class="footer"><!--Footer summary and weather widgetE--> 
-  <hr>
-
-  <h3 style="color:#F8F9F9"> SUMMARY OF QUALIFICATIONS: </h3><br>
-  <p style="color:#F8F9F9">A highly motivated and energetic Developer driven by engineering solutions and intellectual curiosity. Quick- learner who can manage multiple tasks effectively, and builds and debugs code using ReactJS, NodeJS, JavaScript, PHP, HTML, CSS, and Drupal/CMS. Proficient with Information Technology, Computer Programming and Automation, Code Manipulation, System Databases, API Integration, Finance, and Government Contracting. Seeking a challenging position to expand professional growth and knowledge!</p>
-  <hr>
-<br><br>
-  <a class="weatherwidget-io" href="https://forecast7.com/en/40d71n74d01/new-york/?unit=us" data-label_1="Los Angeles" data-label_2="Forecast" data-theme="hexellence" data-textcolor="#aa8e1c" data-cloudcolor="#1c93aa">Los Angeles Forecast</a>
-<script>
-!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-</script>
-
-</div>
-
-
+<div class="footer"> </footer> </div>
+<hr>
+    
 </body>
 </html>
