--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Vanessa | Software Engineer </title>
+  <title>Vanessa | Software Developer </title>
   <link href="picz/avamountaintattoofavicon.ico" rel="shortcut icon">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,8 +31,8 @@
 <div class="container"> 
   <div class="jumbotron">
 
-    <h2> Vanessa Lin | Software Engineer </h2></br>
-    <h4><i>The world only exists in your eyes, you can make it as big or as small as you want.</i></h4></br>
+    <h2> Vanessa Lin | Web Developer </h2></br>
+    <h4> SF | LA </h4></br>
 <!--START PLANET-->
    <div class="earth planet" data-ptr-autospin="2600ms" data-ptr-float data-ptr-glow="0 0 50px #fff" > </div>
  </br></br>
@@ -162,9 +162,21 @@
 
   </div> <!--END of jumbotron-->
 </div> <!--END of container OUTSIDE-->
+<div class="footer"><!--Footer summary and weather widgetE--> 
+  <hr>
 
-<div class="footer"> </footer> </div>
-<hr>
+  <h3 style="color:#F8F9F9"> SUMMARY OF QUALIFICATIONS: </h3><br>
+  <p style="color:#F8F9F9">A highly motivated and energetic Developer driven by engineering solutions and intellectual curiosity. Quick- learner who can manage multiple tasks effectively, and builds and debugs code using ReactJS, NodeJS, JavaScript, PHP, HTML, CSS, and Drupal/CMS. Proficient with Information Technology, Computer Programming and Automation, Code Manipulation, System Databases, API Integration, Finance, and Government Contracting. Seeking a challenging position to expand professional growth and knowledge!</p>
+  <hr>
+  
+<br><br>
+  <a class="weatherwidget-io" href="https://forecast7.com/en/40d71n74d01/new-york/?unit=us" data-label_1="Los Angeles" data-label_2="Forecast" data-theme="hexellence" data-textcolor="#aa8e1c" data-cloudcolor="#1c93aa">Los Angeles Forecast</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
+
+</div>
+<br>
     
 </body>
 </html>
