--- a/index.html
+++ b/index.html
@@ -129,19 +129,19 @@
 
             <div class="carousel-inner">
               <div class="item active">
-                <img src="picz/munipolaroid.jpg" alt="munipolaroid">
+                <img src="picz/landsend1.jpg" alt="SF">
               </div>
               <div class="item">
-                <img src="picz/ravie4dogs.jpg" alt="ravie">
+                <img src="picz/kanab1.jpg" alt="utah">
               </div>
               <div class="item">
-                <img src="picz/inked.jpg" alt="sinked">
+                <img src="picz/roar.jpg" alt="joshuatree">
               </div>
               <div class="item">
-                <img src="picz/magnetism.jpg" alt="magnetism">
+                <img src="picz/tahoe.jpg" alt="tahoe">
               </div>
               <div class="item">
-                <img src="picz/chess.JPG" alt="chess">
+                <img src="picz/finn.jpg" alt="finn">
               </div>
             </div> <!--END carousel-inner-->
       </div> <!--END whole Carousel-->
