--- a/contactme.html
+++ b/contactme.html
@@ -26,6 +26,7 @@
 		<div class="cloud x3"></div>
 		<div class="cloud x4"></div>
 		<div class="cloud x5"></div>
+		<img src="picz/roar.jpg">
 	</div>
 </div>
 
