--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <li><a href="contactme.html">| Email Me &nbsp&nbsp<('.'<)</a></li>
             <li><a href="https://github.com/v33lynn/LakersOvertime" target="blank">| Lakers Overtime&nbsp&nbsp<( '.' )></a></li>
             <li><a href="https://www.linkedin.com/in/vanessamaylin" target="blank">| LinkedIn&nbsp&nbsp(>'.')></a></li>
-            <li><a href="https://www.southpark.cc.com/" target="blank">| Recent Project&nbsp&nbsp<( '.' )></a></li> 
+            <li><a href="https://southpark.cc.com/" target="blank">| Recent Project&nbsp&nbsp<( '.' )></a></li> 
           </ul>
         </div><!--end navbar collapse div-->
       </div><!--end navbar container-fluid-->
