--- a/contactme.html
+++ b/contactme.html
@@ -26,7 +26,7 @@
 		<div class="cloud x3"></div>
 		<div class="cloud x4"></div>
 		<div class="cloud x5"></div>
-		<img src="picz/roar.jpg">
+		<img src="picz/roar.jpg" style="border-radius: 50px;">
 	</div>
 </div>
 
