--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <img src="picz/kanab1.jpg" alt="utah">
               </div>
               <div class="item">
-                <img src="picz/roar.jpg" alt="joshuatree">
+                <img src="picz/sierranev2.jpg" alt="nevada">
               </div>
               <div class="item">
                 <img src="picz/tahoe.jpg" alt="tahoe">
