--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Vanessa | Software Engineer </title>
+  <title>Vanessa L | Software Engineer </title>
   <link href="picz/avamountaintattoofavicon.ico" rel="shortcut icon">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,9 +28,8 @@
 <body>
 
 <div class="container"> 
-  <div class="jumbotron">
 
-    <h2> Vanessa Lin | Software Engineer </h2></br>
+    <h2> Vanessa L | Software Engineer </h2></br>
     <h4><i>The world only exists in your eyes, you can make it as big or as small as you want.</i> </h4></br>
   <!--START PLANET-->
    <div class="earth planet" data-ptr-autospin="2600ms" data-ptr-float data-ptr-glow="0 0 50px #fff" > </div>
@@ -129,16 +128,19 @@
 
             <div class="carousel-inner">
               <div class="item active">
-                <img src="picz/landsend1.jpg" alt="SF">
+                <img src="picz/sierranev2.jpg" alt="nevada">
               </div>
               <div class="item">
                 <img src="picz/kanab1.jpg" alt="utah">
               </div>
               <div class="item">
-                <img src="picz/sierranev2.jpg" alt="nevada">
+                <img src="picz/landsend1.jpg" alt="SF">
               </div>
               <div class="item">
                 <img src="picz/tahoe.jpg" alt="tahoe">
+              </div>
+              <div class="item">
+                <img src="picz/gypsygrandcanyonbg.jpg" alt="arizona">
               </div>
               <div class="item">
                 <img src="picz/finn.jpg" alt="finn">
@@ -173,7 +175,7 @@
       
     </div><!--end footer div-->
     <br>
-  </div> <!--END of jumbotron-->
+
 </div> <!--END of container OUTSIDE-->
       
 </body>
