--- a/contactme.html
+++ b/contactme.html
@@ -19,7 +19,7 @@
 
 <div class="mail"> 
 	<div id="clouds">
-		<img class="img-circle" src="picz/funston.JPG">
+		<img class="img-circle" src="picz/horseshoebend.jpg">
 		<div class="cloud x1"></div>
 			<h2> <a href="mailto:vmaylin@gmail.com? Subject=Job%20Opportunity%20for%20Vanessa%20Lin!%20" target="_top"> <u> Click here </u> to email me </a> </h2>
 		<div class="cloud x2"></div>
