the great divide

--- a/contactme.html
+++ b/contactme.html
@@ -19,12 +19,13 @@
 
 <div class="mail"> 
 	<div id="clouds">
-		<img class="img-circle" src="picz/horseshoebend.jpg">
+		<img class="img-circle" src="picz/horseshoebend.jpg" style="max-width: 20%;">
 		<div class="cloud x1"></div>
-			<h2> <a href="mailto:vmaylin@gmail.com? Subject=Job%20Opportunity%20for%20Vanessa%20Lin!%20" target="_top"> <u> Click here </u> to email me </a> </h2>
+			<h2> <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=vmaylin@gmail.com" target="_blank" rel="noopener noreferrer"> <u>Click here</u> to email me </a> </h2>
 		<div class="cloud x2"></div>
+		<img src="picz/roar.jpg" style="border-radius: 50px; max-width: 40%;">
+		<p>Hope to hear from you soon!</p>
 		<div class="cloud x3"></div>
-		<img src="picz/roar.jpg" style="border-radius: 50px;">
 		<div class="cloud x4"></div>
 		<div class="cloud x5"></div>
 	</div>
