--- a/index.html
+++ b/index.html
@@ -117,13 +117,14 @@
           <h4> FujiFilm X-Series + GoPro Hero </h4>
         </div>
 
-      <div class="carousel slide" id="screenshot-carousel" data-ride="carousel">
+      <div class="carousel slide" id="screenshot-carousel"  data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#screenshot-carousel" data-slide-to="0" class="active"></li> 
             <li data-target="#screenshot-carousel" data-slide-to="1"></li> 
             <li data-target="#screenshot-carousel" data-slide-to="2"></li> 
             <li data-target="#screenshot-carousel" data-slide-to="3"></li> 
             <li data-target="#screenshot-carousel" data-slide-to="4"></li>  
+            <li data-target="#screenshot-carousel" data-slide-to="5"></li>  
           </ol>
 
             <div class="carousel-inner">
