--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <ul class="nav navbar-nav">
             <li><a class="active"> | Home</a></li>
             <li><a href="contactme.html">| Email Me &nbsp&nbsp</a></li>
-            <li><a href="https://github.com/v33lynn/LakersOvertime" target="blank">| Lakers Overtime&nbsp&nbsp</a></li>
+            <li><a href="LakersOvertime.html" target="blank">| Lakers Overtime&nbsp&nbsp</a></li>
             <li><a href="https://www.linkedin.com/in/vanessamaylin" target="blank">| LinkedIn&nbsp&nbsp</a></li>
             <li><a href="https://southpark.cc.com/" target="blank">| Recent Project&nbsp&nbsp</a></li> 
           </ul>
