--- a/LakersOvertime.html
+++ b/LakersOvertime.html
@@ -53,7 +53,7 @@
         <!-- <a href= "/php/index.php" > -->
             <ul class="nav navbar-nav"> 
                 <li><a target="_blank" href="http://www.nba.com/lakers/tickets?ls=nav_tickets"> Buy Tickets </a> </li>
-                <li><a target="_blank" ref="http://www.nba.com/lakers/?tmd=1"> NBA | Lakers.com </a></li>
+                <li><a target="_blank" ref="https://www.nba.com/lakers/news?ls=nav_news"> Lakers | News </a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <span class="glyphicon glyphicon-earphone"> Contact <b class="caret"></b> </span> </a>
                     <ul class="dropdown-menu">
