--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script src="js/bootstrap.js"></script>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/planetarium.css">
-  <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
   <script type="text/javascript">
       $(document).ready(function(){
@@ -28,7 +28,6 @@
 <body>
 
 <div class="container"> 
-
     <h2> Vanessa L | Software Engineer </h2></br>
     <h4><i>The world only exists in your eyes, you can make it as big or as small as you want.</i> </h4></br>
   <!--START PLANET-->
@@ -161,6 +160,7 @@
       </div>
     </div>
 
+</div> <!--END of container OUTSIDE-->
     
     <br>
     <div class="footer"><!--Footer summary and weather widgetE--> 
