Everything Everywhere All At Once

--- a/index.html
+++ b/index.html
@@ -34,6 +34,31 @@
    <div class="earth planet" data-ptr-autospin="2600ms" data-ptr-float data-ptr-glow="0 0 50px #fff" > </div>
  </br></br>
 
+ <hr>
+ <!-- start of navBar -->
+     <nav class="navbar-inverse">
+       <div class="container-fluid">
+         <div class="navbar-header">
+           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>                        
+           </button>
+         </div><!--end navbar-header-->
+ 
+         <div class="collapse navbar-collapse" id="myNavbar">
+           <ul class="nav navbar-nav">
+             <li><a class="active"> | Home</a></li>
+             <li><a href="contactme.html">| Email Me &nbsp&nbsp</a></li>
+             <li><a href="LakersOvertime.html" target="blank">| Lakers Overtime&nbsp&nbsp</a></li>
+             <li><a href="https://www.linkedin.com/in/vanessamaylin" target="blank">| LinkedIn&nbsp&nbsp</a></li>
+             <li><a href="https://southpark.cc.com/" target="blank">| Recent Project&nbsp&nbsp</a></li> 
+           </ul>
+         </div><!--end navbar collapse div-->
+       </div><!--end navbar container-fluid-->
+     </nav>
+ <!-- end of navBar -->
+
      <script type="text/javascript">
        $(document).ready(function() {
         $(".planet").planetarium({
@@ -52,50 +77,11 @@
     </script>
 <!--END PLANET -->
     <img src="picz/voyageoriginal_4ground2.png" alt="upvoyage" class="img-responsive">
-    
-    <hr>
-<!-- start of navBar -->
-    <nav class="navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>                        
-          </button>
-        </div><!--end navbar-header-->
-
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav">
-            <li><a class="active"> | Home</a></li>
-            <li><a href="contactme.html">| Email Me &nbsp&nbsp</a></li>
-            <li><a href="LakersOvertime.html" target="blank">| Lakers Overtime&nbsp&nbsp</a></li>
-            <li><a href="https://www.linkedin.com/in/vanessamaylin" target="blank">| LinkedIn&nbsp&nbsp</a></li>
-            <li><a href="https://southpark.cc.com/" target="blank">| Recent Project&nbsp&nbsp</a></li> 
-          </ul>
-        </div><!--end navbar collapse div-->
-      </div><!--end navbar container-fluid-->
-    </nav>
-<!-- end of navBar -->
 
 </br></br>
       <!--CAROUSEL-->
 <div class="col-sm-6"> 
-  <section> 
-        <div class="page-header" id="#carousel">
-          <h4> FujiFilm X-Series + GoPro Hero </h4>
-        </div>
-
-      <div class="carousel slide" id="screenshot-carousel"  data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#screenshot-carousel" data-slide-to="0" class="active"></li> 
-            <li data-target="#screenshot-carousel" data-slide-to="1"></li> 
-            <li data-target="#screenshot-carousel" data-slide-to="2"></li> 
-            <li data-target="#screenshot-carousel" data-slide-to="3"></li> 
-            <li data-target="#screenshot-carousel" data-slide-to="4"></li>  
-            <li data-target="#screenshot-carousel" data-slide-to="5"></li>  
-          </ol>
-
+  <section>
             <div class="carousel-inner">
               <div class="item active">
                 <img src="picz/sierranev2.jpg" alt="nevada">
@@ -116,9 +102,24 @@
                 <img src="picz/finn.jpg" alt="finn">
               </div>
             </div> <!--END carousel-inner-->
-      </div> <!--END whole Carousel-->
+
+      <div class="page-header" id="#carousel">
+        <h4> FujiFilm X-Series + GoPro Hero </h4>
+      </div>
+    
+          <div class="carousel slide" id="screenshot-carousel"  data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#screenshot-carousel" data-slide-to="0" class="active"></li> 
+                <li data-target="#screenshot-carousel" data-slide-to="1"></li> 
+                <li data-target="#screenshot-carousel" data-slide-to="2"></li> 
+                <li data-target="#screenshot-carousel" data-slide-to="3"></li> 
+                <li data-target="#screenshot-carousel" data-slide-to="4"></li>  
+                <li data-target="#screenshot-carousel" data-slide-to="5"></li>  
+              </ol>
+          </div> <!--END Right side FujiFilm Carousel-->
+
     </section><!--END section-->
-</div> <!--END carousel ontainer--> 
+</div> <!--END entire Container--> 
 
 <br><br>
 
