--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 
 <div class="container"> 
-    <h2> Vanessa L  | Software Engineer </h2></br>
+    <h2> Vanessa L  | FrontEnd Developer </h2></br>
     <h4><i>The world only exists in your eyes, you can make it as big or as small as you want.</i> </h4></br>
   <!--START PLANET-->
    <div class="earth planet" data-ptr-autospin="2600ms" data-ptr-float data-ptr-glow="0 0 50px #fff" > </div>
@@ -78,7 +78,7 @@
           });
     </script>
 <!--END PLANET -->
-    <img src="picz/voyageoriginal_4ground2.png" alt="upvoyage" class="img-responsive">
+    <img src="picz/Ava_Voyage.png" alt="Hi!" class="img-responsive">
 </br></br>
 
 <!--Summary Box-->
